force-app/main/default/objects/CC_IA_Einstein_Config__c/CC_IA_Einstein_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Control de la IA para el Contact Center</description>
    <label>CC IA Einstein Configuration</label>
</CustomObject>