force-app/main/default/objects/CC_IA_Einstein_Config__c/fields/CC_IA_Canal_de_Procedencia__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_Canal_de_Procedencia__c</fullName>
    <description>Canal de Procedencia del caso para el que van a estar activas las funcionalidades de Einstein IA</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Este campo debe tener el mismo valor definido en Canal de Procedencia del caso</inlineHelpText>
    <label>Canal de Procedencia</label>
    <type>TextArea</type>
</CustomField>