force-app/main/default/objects/CC_IA_Einstein_Config__c/fields/CC_IA_ON_OFF__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_ON_OFF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla el uso de la IA si está marcado es habilitado (ON) , de lo contrario esta deshabilitada (OFF)</description>
    <label>CC IA ON/OFF</label>
    <type>Checkbox</type>
</CustomField>