force-app/main/default/objects/CC_IA_Einstein_Config__c/fields/CC_IA_RAG_Activo__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_RAG_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo marca si los prompts deben lanzarse en su versión RAG o la versión standard.</description>
    <label>RAG Activo</label>
    <type>Checkbox</type>
</CustomField>