force-app/main/default/objects/CC_IA_Einstein_Config__c/fields/CC_IA_RAG_Artprop_Template__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_RAG_Artprop_Template__c</fullName>
    <description>Este campo almacena el Api Name del template a lanzar mediante RAG para la funcionalidad de Artículos Recomendados.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Introduce el Api Name del template a lanzar mediante RAG para la funcionalidad de Artículos Recomendados.</inlineHelpText>
    <label>RAG Artículo Propuesto Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>