force-app/main/default/objects/CC_IA_Einstein_Config__c/fields/CC_IA_RAG_Chat_Template__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_RAG_Chat_Template__c</fullName>
    <description>Almacena el nombre del Template a lanzar en el Chat mediante RAG.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Introduce el Api name del template a llamar mediante RAG en el Chat Interactivo</inlineHelpText>
    <label>RAG Chat Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>